GL/src/test/deca/context/valid/deca_sans_objet/print.deca
// Description:
//    test de print
//
// Resultats:
//    Ok
//
// Historique:
//    cree le 01/01/2026

{
    print("true");
    println(1 + 2);
    println(1.5);
}